@@ -46,6 +46,8 @@ v0.61.1		20-Jun-2004.
 		displayed stays around the last area.
 		If a message area is deleted and a rulefile is present, this
 		rulefile is deleted too.
+		When a new golded.inc file is written, only fidonet records
+		that are active are written.
 
 
 v0.61.0		06-Jun-2004 - 20-Jun-2004
